<resources>
    <string name="app_name">MobAppPrototype</string>
    <string name="btnFindTutor_text">Find Tutor</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="what_you_have_searched_for">What you have searched for.</string>
    <string name="tutor_image">Tutor Image</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="book">Book</string>

    <string-array name="roles">
        <item>Student</item>
        <item>Tutor</item>
    </string-array>

    <string-array name="weaknessesOrStrengths">
        <item>Weaknesses</item>
        <item>Strengths</item>
    </string-array>

    <string-array name="programs">
        <item>Accountancy</item>
        <item>Business Administration</item>
        <item>Civil Engineering</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Nursing</item>
        <item>Education</item>
        <item>Architecture</item>
        <item>Law</item>
        <item>IT</item>
        <item>Chemical Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Electrical Engineering</item>
        <item>Mathematics</item>
        <item>Psychology</item>
        <item>Criminology</item>
        <item>Forensic Science</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="tutors">Tutors:</string>
    <string name="join">Join</string>
    <string name="james_bautista">James Bautista</string>
    <string name="bachelor_of_science_in">Bachelor of Science in</string>
    <string name="rating">Rating</string>
    <string name="bachelor">Bachelor of Science in</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>