<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="@color/white"
    android:id="@+id/main"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/ivBackFLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="347dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackFLogin">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:fontFamily="@font/bold"
            android:text="Welcome to UC Hub!"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/default_options_border_bg_gray"
                android:ems="10"
                android:hint="Enter your email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/appGray8"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/default_options_border_bg_gray"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/appGray8"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/semibold"
        android:text="@string/forgot_password"
        android:textColor="@color/appGray6"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnLoginReal"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/appGreen"
        android:fontFamily="@font/semibold"
        android:text="@string/login"
        android:textColor="@color/appWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginTop="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginReal">

        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/medium"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/appBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvRegisterNow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textView35"
                android:layout_marginStart="3dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/bold"
                android:text="@string/register_now"
                android:textColor="@color/appGreen"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView35"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>